--- a/style.css
+++ b/style.css
@@ -1,20 +1,38 @@
-body {
+body{
     font-family: "ＭＳ Ｐゴシック";
     background-color: #47ac4a;
+    margin:0;
+    padding:0;
+}
+.wrap-col{
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+
+.header{
+    background: rgb(2, 75, 0); 
+    background-image: linear-gradient(rgb(2, 75, 0),60%, #47ac4a);
+    text-align: center;
+    margin-bottom: 6%;
+    align-items: center;
+}
+
+.frase{
+    margin-top: 12%;
+    align-self:center;
+    text-align: center;
+    width: 80%
 
 }
-.header  {
-    background: rgb(2, 75, 0); 
-    position: fixed;
-    width: 100%;
-    height: 8%;
-    top: 0px;
-    left: 0px;
-    display: flex;
-    justify-content: center;
+
+.botao{
+    margin-top: 20px;
+    align-self: center;
 }
- 
-.button {
+
+#clickme{
     background-color: #47ac4a;
     border: 2px solid;
     color: white;
@@ -24,40 +42,20 @@ body {
     display: inline-block;
     font-size: 16px;
     border-radius: 4px;
-    margin:0 auto;
-  }
-
-.botao{
-    position: absolute;
-    left: 50%;
-    top: 65%;
-    transform: translate(-50%, -50%);
-    padding: 10px;
 }
-
-  .button:active{
+#clickme:active{
     border: 2px solid #000000;
     color: black;
   }
 
-  .button:hover{
+  #clickme:hover{
     background-color: #5ead60;
     cursor: pointer
   }
-
-  .center {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding: 10px;
-    }
-
-    h1{
-        display:inline;
-        float:left;
-    }
-
-    .botao{
-        margin: 0 auto
-    }
+p{
+    font-size: 180%;
+    font-weight: bold;
+}
+.spacing{
+    height:30%;
+}
